@@ -13,10 +13,11 @@
 * ZX-Uno
 * Prism
 * TBBlue/ZX Spectrum Next
+* Chrome
 * Jupiter Ace
 * Amstrad CPC 464
 
--Is the only emulator for machines: ZX-Uno, Chloe 140/280, Prism and TBBlue
+-Is the only emulator for machines: ZX-Uno, Chloe 140/280, Prism, TBBlue and Chrome
 
 -Almost perfect emulation of timing of all machine models
 
