@@ -15,6 +15,7 @@ It's a ZX Machines Emulator for Unix, including:
 -ZX-Uno
 -Prism
 -TBBlue/ZX Spectrum Next
+-Chrome
 -Jupiter Ace
 -Amstrad CPC 464
 
