@@ -1,5 +1,6 @@
 Version 5.1. 24 April 2017 - xxx edition
 
+Added machine Chrome (Italian ZX Spectrum Clone)
 Added menu movement with mouse
 Added Visualmem, Poke, Find, Save binary menus also for Sinclair QL
 Added setting to test configuration
